Archive2/cc/0bdc5d387019e4/output
main.cpp: In function 'int main(int, char**)':
main.cpp:8:33: error: 'printf' was not declared in this scope
   printf("Entrez le nombre 1 : ");
                                 ^
main.cpp:9:23: error: 'scanf' was not declared in this scope
   scanf("%d", &nombre1);
                       ^
